@@ -1,0 +1,5 @@
+set jp to "日本語"
+
+set ru to "Русский"
+
+jp & " and " & ru -- returns "日本語 and Русский"
